# bank-reco-ai-agent

./: README.md  app.py  pyproject.toml  render.yaml  requirements.txt  sample_books_data.xlsx  test_new_format.py
bank_reco/: main.py  statements_data.py  temp.py
gst_reco/: IMPLEMENTATION_SUMMARY.md  README.md  api_test.py  api_test_comprehensive.py  create_sample_data.py  gst_data_processor.py  main.py  report_generator.py  sample_books_data.xlsx  test_gst_reconciliation.py  utils.py
gst_reco/reports/: TEST_COMPANY_books_unmatched_20250630_034123.csv  TEST_COMPANY_gst_reconciliation_detailed_20250630_033629.csv  TEST_COMPANY_gst_reconciliation_detailed_20250630_034136.csv  TEST_COMPANY_gst_reconciliation_summary_20250630_033431.csv  TEST_COMPANY_gst_reconciliation_summary_20250630_033629.csv  TEST_COMPANY_gstr_unmatched_20250630_033629.csv  (+7 more)
reports/: 18876_books_unmatched_20250630_033223.csv  18876_books_unmatched_20250630_045540.csv  18876_gst_reconciliation_detailed_20250630_033223.csv  18876_gst_reconciliation_detailed_20250630_045450.csv  18876_gst_reconciliation_detailed_20250630_050144.csv  18876_gst_reconciliation_summary_20250630_033223.csv  18876_gst_reconciliation_summary_20250630_050144.csv  18876_gstr_unmatched_20250630_033223.csv  18876_gstr_unmatched_20250630_045450.csv  18876_gstr_unmatched_20250630_050144.csv  TEST_GSTR2A_gst_reconciliation_detailed_20250630_035749.csv  TEST_GSTR2A_gst_reconciliation_summary_20250630_035749.csv  TEST_GSTR2B_gst_reconciliation_summary_20250630_035749.csv
src/: DetailedStatement.xlsx  app.py  unmatched_bank.txt
(+19 files in other folders)
